# SentinelOps

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
runbooks/: seed.json
scripts/: simulate.py
sentinelops/: __init__.py  analyzer.py  api.py  config.py  correlator.py  detector.py  incidents.py  main.py  models.py  runbooks.py  store.py
sentinelops/integrations/: elasticsearch.py  pagerduty.py  slack.py
sentinelops/utils/: logging.py
tests/: conftest.py  test_correlator.py  test_detector.py  test_incidents.py
web/: index.html  package-lock.json  package.json
web/src/: index.css  main.jsx  theme.js
web/src/components/: IncidentRow.jsx  Layout.jsx  ServiceCard.jsx  SeverityBadge.jsx  StatsBar.jsx
web/src/hooks/: useApi.js
web/src/pages/: Dashboard.jsx  IncidentDetail.jsx
